--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-regular-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "fortawesome/react-fontawesome",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "dotenv": "^10.0.0",
     "next": "latest",
     "react": "^17.0.2",
