--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "fortawesome/react-fontawesome",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "dotenv": "^10.0.0",
+    "hamburger-react": "^2.4.1",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
