--- a/package.json
+++ b/package.json
@@ -6,17 +6,13 @@
     "start": "next start"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-brands-svg-icons": "^5.15.3",
-    "@fortawesome/free-regular-svg-icons": "^5.15.3",
-    "@fortawesome/free-solid-svg-icons": "fortawesome/react-fontawesome",
-    "@fortawesome/react-fontawesome": "^0.1.14",
     "dotenv": "^10.0.0",
     "hamburger-react": "^2.4.1",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
+    "react-social-icons": "^5.5.1",
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
